2008-10-15   D. V. Wiebe <getdata@ketiltrout.net>  svn:147
	* README.f77 bindings/f77/fgetdata.c bindings/ff7/fgetdata.h
	bindings/f77/getdata.f.in: Add more Fortran 77 bindings.

	* README.f95 bindings/f77/fgetdata.f90.in: Added Fortran 95 bindings for the
	new public functions.

2008-10-14   D. V. Wiebe <getdata@ketiltrout.net>  svn:146
	* bindings/f77/fgetdata.c bindings/f77/fgetdata.h
	bindings/f77/getdata.f90.in: Renamed GDFNFT to GDFNFO.

	* README.f77 bindings/f77/fgetdata.c bindings/f77/fgetdata.h
	bindings/f77/getdata.f.in bindings/f77/make_parameters.c: Added Fortran 77
	bindings for the new public functions.

2008-10-14   D. V. Wiebe <getdata@ketiltrout.net>  svn:143
	* test/nframes_empty.c: Correct for removal of GD_E_EMPTY.

	* README.cxx bindings/cxx/dirfile.h bindings/cxx/dirfile.cpp
	bindings/cxx/entry.h: Added C++ bindings for new public functions.

	* src/constant.c: get_constant returns size_t, not ssize_t, like the other
	get_<foo>() functions.

	* src/getdata.h.in: Add some missing public prototypes.
	
	* src/nfields.c src/nmeta.c: Removed the _ after nmeta in public function
	names.
	* test/nmeta_type.c test/nmeta_vectors_parent.c test/nmeta_parent.c
	test/add_meta_phase.c test/add_meta_multiply.c test/nmeta_type_invalid.c
	test/add_meta_linterp.c test/add_meta_lincom.c test/nmeta_invalid.c
	test/nmeta.c test/nmeta_vectors_invalid.c test/add_meta_bit.c
	test/add_meta.c test/nmeta_type_parent.c: Updated.

	* src/close.c (_GD_FreeD) src/entry.c (_GD_FreeE) src/field_list.c
	src/internal.h src/meta_list.c: Replaced get_constant_list() and
	get_string_list() with get_field_list_by_type(), which reduces the amount of
	duplicated code and provides a more flexible interface.  Similarly with the
	META versions.
	* test/clist.c test/clist_invalid.c test/clist_meta.c
	test/clist_meta_invalid.c test/slist.c test/slist_invalid.c test/slist_meta.c
	test/slist_meta_invalid.c: Removed.
	* test/flist_type.c test/flist_type_invalid.c test/flist_type_meta.c